// Copyright 2022 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
syntax = "proto3";

package recipe_modules.build.proto_validation.tests;

message EmptyMessage {}

message BadMessage {}

message MessageWithRequiredPrimitive {
  string required = 1;
}

message MessageWithOptionalPrimitive {
  optional string optional = 1;
}

message MessageWithRequiredMessage {
  EmptyMessage required = 1;
}

message MessageWithOptionalMessage {
  EmptyMessage optional = 1;
}

message MessageWithNestedMessage {
  MessageWithRequiredMessage nested = 1;
}

message MessageWithRequiredRepeatedPrimitive {
  repeated string required = 1;
}

message MessageWithOptionalRepeatedPrimitive {
  repeated string optional = 1;
}

message MessageWithRequiredRepeatedMessage {
  repeated EmptyMessage required = 1;
}

message MessageWithOptionalRepeatedMessage {
  repeated EmptyMessage optional = 1;
}

message MessageWithNestedRepeatedMessage {
  repeated MessageWithRequiredMessage nested = 1;
}

message MessageWithRepeatedFieldRequiringCallback {
  repeated string values = 1;
}
